# claude-code-flow

./: .dockerignore  .eslintrc.json  .gitignore  CRITICAL_BLOCKING_ISSUES.md  Cargo.toml  Dockerfile  Dockerfile.production  ENTERPRISE_PRODUCTION_DEPLOYMENT_GUIDE.md  ENTERPRISE_PRODUCTION_READINESS_REPORT.md  ENTERPRISE_SECURITY_STATUS.md  ENTERPRISE_TYPESCRIPT_FIXES_SUMMARY.md  HIERARCHICAL_AGENTS_USER_GUIDE.md  MISSING_PROPERTIES_SUMMARY.md  MODULE_STUBS_SUMMARY.md  README-RUST-GO.md  README.md  SETUP-COMPLETE.md  TERMINAL_UI_IMPLEMENTATION.md  TESTING_RESULTS.md  TYPESCRIPT_ERROR_ANALYSIS.md  build-final.sh  build.sh  claude-desktop-config.json  docker-compose.production.yml  help-system-demo.md  install-global.sh  klaude  package-lock.json  package.json  test-hierarchical-agents.js  test-installation.sh  tsconfig.build.json  tsconfig.json
.github/workflows/: ci-cd.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
backup/: backup-strategy.yaml
benchmarks/: DEPLOYMENT_GUIDE.md  README.md  config.yaml  humaneval_results.json  multipl_e_results.json  orchestrator.py  requirements.txt  run_benchmarks.py  test_framework.py  test_results_20250710_012917.json
benchmarks/bigcode/: run_bigcode_complete.py  run_multipl_e.py
benchmarks/codegen/: run_conala.py
benchmarks/coordination/: hive_mind_orchestrator.py
benchmarks/desktop-app/: README.md  VALIDATION_REPORT.md  package.json
benchmarks/desktop-app/backend/: electronAPI.js  main.js
benchmarks/desktop-app/src/: App.js  main.js  preload.js
benchmarks/devai/: run_devai.py
benchmarks/humaneval/: run_humaneval.py  run_humaneval_complete.py
benchmarks/integration/: ruv_mcp_integration.py
benchmarks/performance/: ruv_optimization_engine.py
benchmarks/quality/: velocity_quality_metrics.py
benchmarks/repoeval/: run_repoeval.py
benchmarks/rust-engines/: Cargo.toml
benchmarks/rust-engines/src/: lib.rs
benchmarks/security/: run_cwe_bench.py
benchmarks/swe_bench/: run_swe_bench.py  run_swe_bench_complete.py
claude-flow-mcp-server/: INSTALLATION.md  LLM-DELEGATION-GUIDE.md  README.md  package-lock.json  package.json  server.js  setup.js  test.js
claude-flow-mcp-server/config/: claude-flow-config.json  generated-mcp-config.json  mcp-config.json
claude-flow-mcp-server/examples/: llm-delegation-example.js  usage-example.js
docker/production/: production-config.json
docs/: QUDAG_INTEGRATION.md
examples/: advanced_coordination.rs  basic.rs
examples/hierarchical-agents/: README.md
examples/hierarchical-agents/advanced-patterns/: qudag-integration-example.js
examples/hierarchical-agents/basic-examples/: simple-spawn.js
examples/hierarchical-agents/organizational-structures/: startup-team.js
go-mcp/: go.mod  handlers_complete.go  handlers_stubs.go  main.go  mcp_complete.go
go-mcp/go-webui/: go.mod
go-neural/: go.mod  main.go
go-neural/go-mcp/: go.mod
go-webui/: Dockerfile  README.md  build.sh  dev.sh  docker-compose.yml  go.mod  helpers.go  main.go  nginx.conf  start.sh  task-completion-summary.md  templates.go  test-demo.sh  web-ui-completion-report.json
go-webui/static/: manifest.json  styles.css
go-webui/wasm/: main.go  main.wasm
k8s/: claude-flow-deployment.yaml
memory/: memory-store.json
monitoring/: fluent-bit.conf  prometheus.yml
scripts/production/: backup.sh  performance-test.sh  start-production.sh
src/: lib.rs  main.rs  main_backup.rs  main_demo.rs  main_simple.rs
src/agents/: agent-lifecycle-manager.ts  agent-manager.ts  agent-registry.ts  hierarchical-agent-system.ts  hierarchical-task-spawner.ts  mod.rs
src/cli/: cli-core.ts  commands.rs  commands_simple.rs  completion.ts  formatter.ts  index-remote.ts  index.ts  interactive.rs  mod.rs  mod_backup.rs  mod_simple.rs  node-repl.ts  repl.ts  simple-cli.ts  simple-mcp.ts  simple-orchestrator.ts  type-guards.ts  ui.rs
src/cli/commands/: agent.ts  (+21 more)
src/communication/: inter-agent-communication.ts  message-bus.ts  qudag-integration.ts
src/config/: config-manager.ts  mod.rs
src/coordination/: advanced-task-executor.ts  background-executor.ts  load-balancer.ts  messaging.ts  mod.rs  resources.ts  swarm-coordinator.ts  swarm-monitor.ts  work-stealing.ts
src/core/: config.ts  event-bus.ts  health.rs  logger.ts  metrics.rs  mod.rs  orchestrator.ts  persistence.ts
src/enterprise/: analytics-manager.ts  analytics_engine.rs  audit-manager.ts  cloud-manager.ts  compliance_monitor.rs  consensus_engine.rs  cross_team_coordinator.rs  deployment-manager.ts  hierarchy_manager.rs  mod.rs  organizational_memory.rs  project-manager.ts  resource_optimizer.rs  security-manager.ts  system_connectors.rs
src/github/: api.rs  auth.rs  coordinator.rs  issue_tracker.rs  mod.rs  pr_manager.rs  release_manager.rs  repo_architect.rs  sync_coordinator.rs  webhooks.rs
src/mcp/: auth.ts  index.ts  mod.rs  swarm-tools.ts
src/memory/: advanced-memory-manager.ts  distributed-memory.ts  manager.ts  mod.rs  swarm-memory.ts
src/migration/: index.ts  logger.ts  migration-analyzer.ts  migration-runner.ts  migration-validator.ts  rollback-manager.ts  types.ts
src/monitoring/: real-time-monitor.ts
src/neural/: mod.rs
src/organization/: org-scaffold.ts
src/polyfills/: deno.ts
src/resources/: resource-manager.ts
src/swarm/: claude-flow-executor.ts  coordinator.ts  direct-executor.ts  executor.ts  memory.ts  mod.rs  prompt-cli.ts  prompt-copier-enhanced.ts  prompt-copier.ts  prompt-manager.ts  prompt-utils.ts  sparc-executor.ts  types.ts
src/task/: commands.ts  coordination.ts  engine.ts  index.ts
src/terminal/: app.rs  dashboard.rs  events.rs  mod.rs  pool.ts  repl.rs  session.ts  themes.rs  vscode-bridge.ts
src/types/: command-compat.d.ts  commander-compat.d.ts  deno.d.ts  global.d.ts  internal-modules.d.ts  npm-imports.d.ts  p-queue.d.ts  vscode.d.ts
src/ui/: mod.rs
src/utils/: colors.ts  errors.ts  mod.rs  runtime.ts  types.ts
tests/benches/: coordination_benchmark.rs
tests/integration/: agent_tests.rs  mod.rs
tests/manual/: test-process-manager.ts  test-process-ui.ts  verify-start-command.ts
(+42 files in other folders)
