[package]
name = "claude-flow-rs"
version = "2.0.0"
authors = ["KooshaPari"]
edition = "2021"
description = "Claude Flow 2.0 - AI Orchestration Platform (Rust Implementation)"
license = "MIT"
repository = "https://github.com/KooshaPari/klaude-flow"

[[bin]]
name = "claude-flow"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Async runtime and networking
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database and storage
rusqlite = { version = "0.29", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Process management and system interaction
nix = "0.27"
libc = "0.2"

# Networking and protocol handling
tungstenite = "0.20"
tokio-tungstenite = "0.20"
uuid = { version = "1.6", features = ["v4"] }

# Configuration and file handling
config = "0.13"
toml = "0.8"
directories = "5.0"
walkdir = "2.4"

# Memory management and optimization
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

# Terminal and UI
crossterm = "0.27"
ratatui = "0.24"

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3"
criterion = "0.5"

[features]
default = ["sqlite", "terminal-ui"]
sqlite = ["rusqlite", "sqlx"]
terminal-ui = ["crossterm", "ratatui"]
performance = ["parking_lot", "dashmap"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true

[[bench]]
name = "coordination_benchmark"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic.rs"
