[package]
name = "claude-flow-rs"
version = "2.0.0"
authors = ["KooshaPari"]
edition = "2021"
description = "Claude Flow 2.0 - AI Orchestration Platform (Rust Implementation)"
license = "MIT"
repository = "https://github.com/KooshaPari/klaude-flow"

[[bin]]
name = "claude-flow"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Async runtime and networking
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_yaml = "0.9"  # REPLACED: unmaintained yaml-rust dependency
serde_yml = "0.0.10"  # SECURITY: Safe replacement for yaml-rust

# Database and storage
# rusqlite = { version = "0.31", features = ["bundled"], optional = true }  # DISABLED: conflicts with SQLx libsqlite3-sys
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"], optional = true }  # SECURITY: MySQL disabled to avoid RSA vulnerability

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Process management and system interaction
nix = "0.27"
libc = "0.2"

# Networking and protocol handling
tungstenite = "0.20"
tokio-tungstenite = "0.20"
uuid = { version = "1.6", features = ["v4", "serde"] }

# GitHub integration
octocrab = { version = "0.32", optional = true }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand = "0.8"
dirs = "5.0"
url = "2.4"

# Configuration and file handling
config = "0.13"
toml = "0.8"
directories = "5.0"
walkdir = "2.4"

# Memory management and optimization
dashmap = { version = "5.5", optional = true }
arc-swap = { version = "1.6", optional = true }
parking_lot = { version = "0.12", optional = true }

# Neural and AI features - DISABLED due to compatibility issues in production
# candle-core = { version = "0.6", optional = true }
# candle-nn = { version = "0.6", optional = true }
# tokenizers = { version = "0.15", optional = true }

# Terminal and UI
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.28", optional = true }
tui-input = { version = "0.8", optional = true }
unicode-width = { version = "0.1", optional = true }
syntect = { version = "5.1", optional = true }
notify = { version = "6.1", optional = true }

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3"
criterion = "0.5"

[features]
default = ["sqlite", "terminal-ui", "github"]
sqlite = ["sqlx"]  # Note: rusqlite conflicts with SQLx - using SQLx only for security
terminal-ui = ["crossterm", "ratatui", "tui-input", "unicode-width", "syntect", "notify"]
performance = ["parking_lot", "dashmap"]
# neural = ["candle-core", "candle-nn", "tokenizers"]  # DISABLED for production
github = ["octocrab"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true

# [[bench]]
# name = "coordination_benchmark"
# harness = false

# [[example]]
# name = "basic_usage"
# path = "examples/basic.rs"
